# interface_sdk

./: BUILD.gn  OAT.xml  README.en.md  README.md  arkui-x.json  copy_xcframework.py  generate_api_symbol_config.py  get_system_resources.sh  obfuscate_js.py  sdkConfig.json  sdkconfig.json
engine/: apiConfig.json  apiDepsConfig.json  arkui-x.json
engine/ets/: @arkui-x.ModuleLoader.d.ts  @arkui-x.bridge.d.ts  @arkui-x.platformview.d.ts  CommonMethod.ts
engine/systemres/: resources.index
plugins/: arkui-x.json
plugins/api/: apiConfig.json  apiconfig.json
plugins/component/: apiConfig.json  apiconfig.json
