# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/common/copy.gni")
import("//build/templates/metadata/module_info.gni")

ohos_copy("ace_tools") {
  sources = [ "//developtools/ace_tools/cli" ]
  outputs = [ target_out_dir + "/$target_name/" ]
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("ets") {
  sources = [ "./engine/ets" ]
  outputs = [ target_out_dir + "/$target_name/" ]
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("systemres") {
  sources = [ "./engine/systemres" ]
  outputs = [ target_out_dir + "/$target_name/" ]
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("node_header") {
  sources = [
    "//third_party/node/src/js_native_api.h",
    "//third_party/node/src/js_native_api_types.h",
    "//third_party/node/src/node_api.h",
    "//third_party/node/src/node_api_types.h",
  ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("napi_header") {
  sources = [ "//foundation/arkui/napi/interfaces/kits/napi/native_api.h" ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("plugin_utils_header") {
  sources = [ "//plugins/interfaces/native/plugin_utils.h" ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("plugin_rawfile_header") {
  sources = [
    "//base/global/resource_management/interfaces/native/resource/include/raw_dir.h",
    "//base/global/resource_management/interfaces/native/resource/include/raw_file.h",
    "//base/global/resource_management/interfaces/native/resource/include/raw_file_manager.h",
  ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("sdkconfig") {
  sources = [ "./sdkConfig.json" ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("engine_apiconfig") {
  sources = [ "./engine/apiConfig.json" ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("api_apiconfig") {
  sources = [ "./plugins/api/apiConfig.json" ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("component_apiconfig") {
  sources = [ "./plugins/component/apiConfig.json" ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

# For xcframework auto packing
template("copy_xcframework") {
  forward_variables_from(invoker,
                         [
                           "deps",
                           "sources",
                           "outputs",
                         ])
  action(target_name) {
    script = "copy_xcframework.py"
    args = [
      "--input",
      rebase_path(sources[0], root_build_dir),
      "--output",
      rebase_path(outputs[0], root_build_dir),
    ]
    if (defined(deps)) {
      deps += [ ":${target_name}_info" ]
    } else {
      deps = [ ":${target_name}_info" ]
    }
  }
  _main_target_name = target_name
  generate_module_info("${target_name}_info") {
    module_type = "framework"
    module_install_name = ""
    module_name = _main_target_name
    module_source_dir = "${root_out_dir}/lib.xcframework/${_main_target_name}"
    install_enable = false
  }
}

if (target_os == "ios") {
  copy_xcframework("copy_libarkui_ios_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libarkui_ios" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/arkui-x/libarkui_ios.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  ohos_copy("node_header_xcframework") {
    sources = [
      "//third_party/node/src/js_native_api.h",
      "//third_party/node/src/js_native_api_types.h",
      "//third_party/node/src/node_api.h",
      "//third_party/node/src/node_api_types.h",
    ]
    outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
    module_source_dir = target_out_dir + "/$target_name/"
    module_install_name = ""
    part_name = "common"
    subsystem_name = "common"
  }

  ohos_copy("napi_header_xcframework") {
    sources = [ "//foundation/arkui/napi/interfaces/kits/napi/native_api.h" ]
    outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
    module_source_dir = target_out_dir + "/$target_name/"
    module_install_name = ""
    part_name = "common"
    subsystem_name = "common"
  }

  ohos_copy("plugin_utils_xcframework") {
    sources = [ "//plugins/interfaces/native/plugin_utils.h" ]
    outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
    module_source_dir = target_out_dir + "/$target_name/"
    module_install_name = ""
    part_name = "common"
    subsystem_name = "common"
  }

  copy_xcframework("copy_libanimator_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libanimator" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/arkui-x/libanimator.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libarkui_componentsnapshot_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libarkui_componentsnapshot" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/arkui-x/libarkui_componentsnapshot.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libconfiguration_xcframework") {
    deps =
        [ "//foundation/arkui/ace_engine/adapter/ios/build:libconfiguration" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/arkui-x/libconfiguration.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libarkui_qrcode_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libarkui_qrcode" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/arkui_components/libarkui_qrcode.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libarkui_relativecontainer_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libarkui_relativecontainer" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/arkui_components/libarkui_relativecontainer.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libarkui_patternlock_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libarkui_patternlock" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/arkui_components/libarkui_patternlock.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libfont_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libfont" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/arkui-x/libfont.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libmeasure_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libmeasure" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/arkui-x/libmeasure.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libmediaquery_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libmediaquery" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/arkui-x/libmediaquery.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libpromptaction_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libpromptaction" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/arkui-x/libpromptaction.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_librouter_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:librouter" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/arkui-x/librouter.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libabilityaccessctrl_xcframework") {
    deps = [
      "//foundation/arkui/ace_engine/adapter/ios/build:libabilityaccessctrl",
    ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libabilityaccessctrl.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libworker_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libworker" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/plugins/libworker.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libdata_relationalstore_xcframework") {
    deps = [
      "//foundation/arkui/ace_engine/adapter/ios/build:libdata_relationalstore",
    ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libdata_relationalstore.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libdata_preferences_xcframework") {
    deps = [
      "//foundation/arkui/ace_engine/adapter/ios/build:libdata_preferences",
    ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libdata_preferences.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_librequest_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:librequest" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/plugins/librequest.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libresourcemanager_xcframework") {
    deps =
        [ "//foundation/arkui/ace_engine/adapter/ios/build:libresourcemanager" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libresourcemanager.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libnet_connection_xcframework") {
    deps =
        [ "//foundation/arkui/ace_engine/adapter/ios/build:libnet_connection" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libnet_connection.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libnet_socket_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libnet_socket" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libnet_socket.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libnet_websocket_xcframework") {
    deps =
        [ "//foundation/arkui/ace_engine/adapter/ios/build:libnet_websocket" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libnet_websocket.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libi18n_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libi18n" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/plugins/libi18n.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libintl_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libintl" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/plugins/libintl.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libxml_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libxml" ]
    sources =
        [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libxml.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libbuffer_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libbuffer" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/plugins/libbuffer.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libconvertxml_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libconvertxml" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libconvertxml.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libprocess_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libprocess" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/plugins/libprocess.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_liburi_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:liburi" ]
    sources =
        [ "${root_out_dir}/lib.ios.framework/arkui/plugins/liburi.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_liburl_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:liburl" ]
    sources =
        [ "${root_out_dir}/lib.ios.framework/arkui/plugins/liburl.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libutil_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libutil" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/plugins/libutil.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libutil_arraylist_xcframework") {
    deps =
        [ "//foundation/arkui/ace_engine/adapter/ios/build:libutil_arraylist" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libutil_arraylist.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libutil_deque_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libutil_deque" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libutil_deque.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libutil_hashmap_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libutil_hashmap" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libutil_hashmap.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libutil_hashset_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libutil_hashset" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libutil_hashset.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libutil_linkedlist_xcframework") {
    deps =
        [ "//foundation/arkui/ace_engine/adapter/ios/build:libutil_linkedlist" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libutil_linkedlist.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libutil_list_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libutil_list" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libutil_list.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libutil_plainarray_xcframework") {
    deps =
        [ "//foundation/arkui/ace_engine/adapter/ios/build:libutil_plainarray" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libutil_plainarray.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libutil_queue_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libutil_queue" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libutil_queue.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libutil_stack_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libutil_stack" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libutil_stack.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libutil_treemap_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libutil_treemap" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libutil_treemap.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libutil_treeset_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libutil_treeset" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libutil_treeset.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libutil_lightweightset_xcframework") {
    deps = [
      "//foundation/arkui/ace_engine/adapter/ios/build:libutil_lightweightset",
    ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libutil_lightweightset.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libutil_lightweightmap_xcframework") {
    deps = [
      "//foundation/arkui/ace_engine/adapter/ios/build:libutil_lightweightmap",
    ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libutil_lightweightmap.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libhilog_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libhilog" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/plugins/libhilog.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libfile_fs_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libfile_fs" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/plugins/libfile_fs.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libbridge_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libbridge" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/plugins/libbridge.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libnet_http_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libnet_http" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/plugins/libnet_http.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libtaskpool_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libtaskpool" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/plugins/libtaskpool.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libtimer_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libtimer" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/plugins/libtimer.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libconsole_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libconsole" ]
    sources = [
      "${root_out_dir}/lib.ios.framework/arkui/plugins/libconsole.xcframework",
    ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }

  copy_xcframework("copy_libdeviceinfo_xcframework") {
    deps = [ "//foundation/arkui/ace_engine/adapter/ios/build:libdeviceinfo" ]
    sources = [ "${root_out_dir}/lib.ios.framework/arkui/plugins/libdeviceinfo.xcframework" ]
    outputs = [ "${root_out_dir}/lib.xcframework/${target_name}" ]
  }
}
