# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/common/copy.gni")
import("//build/templates/metadata/module_info.gni")

template("copy_ace_toolchain") {
  forward_variables_from(invoker,
                         [
                           "deps",
                           "sources",
                           "outputs",
                         ])
  action(target_name) {
    script = "//interface/sdk/obfuscate_js.py"
    args = [
      "--npm",
      rebase_path(sources[1]),
      "--prefix",
      rebase_path(sources[0]),
      "--output",
      rebase_path(outputs[0]),
    ]
    deps = [ ":${target_name}_info" ]
  }
  _target_name = target_name
  generate_module_info("${target_name}_info") {
    module_type = "unknown"
    module_install_name = ""
    module_name = _target_name
    module_source_dir = target_out_dir + "/" + _target_name
    install_enable = false
  }
}

system_resource_hap_path =
    get_label_info("//base/global/system_resources/systemres:systemres_hap",
                   "target_out_dir") + "/SystemResources.hap"
system_resource_path =
    get_label_info("//base/global/system_resources/systemres:systemres_hap",
                   "target_out_dir") + "/resources"
action("get_system_resource") {
  script = "get_system_resources.sh"
  deps = [ "//base/global/system_resources/systemres:systemres_hap" ]
  args = [
    rebase_path(system_resource_hap_path),
    rebase_path(system_resource_path),
  ]
  inputs = [ system_resource_hap_path ]
  outputs = [ system_resource_path ]
}

ohos_copy("bin") {
  sources = [ "//developtools/ace_tools/bin" ]
  outputs = [ target_out_dir + "/$target_name/" ]
  part_name = "common"
  subsystem_name = "common"
}

copy_ace_toolchain("ace_tools") {
  sources = [
    "//developtools/ace_tools/ace_tools",
    "//prebuilts/build-tools/common/nodejs/current/bin/npm",
  ]
  outputs = [ target_out_dir + "/$target_name" ]
}

ohos_copy("ets") {
  sources = [ "./engine/ets" ]
  outputs = [ target_out_dir + "/$target_name/" ]
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("systemres") {
  deps = [ ":get_system_resource" ]
  sources = [ system_resource_path ]
  outputs = [ target_out_dir + "/$target_name/" ]
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("icudata") {
  deps = [ "//foundation/appframework/icu_data:pkg_icudata" ]
  sources = [ "$root_out_dir/icu_data/out/icudt72l.dat" ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("license") {
  sources = [ "//foundation/appframework/LICENSE" ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("node_header") {
  sources = [
    "//third_party/node/src/js_native_api.h",
    "//third_party/node/src/js_native_api_types.h",
    "//third_party/node/src/node_api.h",
    "//third_party/node/src/node_api_types.h",
  ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("libuv_uv_header") {
  sources = [
    "//third_party/libuv/include/uv/aix.h",
    "//third_party/libuv/include/uv/bsd.h",
    "//third_party/libuv/include/uv/darwin.h",
    "//third_party/libuv/include/uv/errno.h",
    "//third_party/libuv/include/uv/linux.h",
    "//third_party/libuv/include/uv/os390.h",
    "//third_party/libuv/include/uv/posix.h",
    "//third_party/libuv/include/uv/sunos.h",
    "//third_party/libuv/include/uv/threadpool.h",
    "//third_party/libuv/include/uv/tree.h",
    "//third_party/libuv/include/uv/unix.h",
    "//third_party/libuv/include/uv/version.h",
    "//third_party/libuv/include/uv/win.h",
  ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("libuv_header") {
  sources = [ "//third_party/libuv/include/uv.h" ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("napi_header") {
  sources = [
    "//foundation/arkui/napi/interfaces/kits/napi/common.h",
    "//foundation/arkui/napi/interfaces/kits/napi/native_api.h",
  ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("plugin_utils_header") {
  sources = [ "//plugins/interfaces/native/plugin_utils.h" ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("plugin_rawfile_header") {
  sources = [
    "//base/global/resource_management/interfaces/native/resource/include/raw_dir.h",
    "//base/global/resource_management/interfaces/native/resource/include/raw_file.h",
    "//base/global/resource_management/interfaces/native/resource/include/raw_file_manager.h",
  ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("ace_xcomponent_header") {
  sources = [
    "//foundation/arkui/ace_engine/interfaces/native/drawable_descriptor.h",
    "//foundation/arkui/ace_engine/interfaces/native/native_interface_xcomponent.h",
    "//foundation/arkui/ace_engine/interfaces/native/native_type.h",
    "//foundation/arkui/ace_engine/interfaces/native/native_xcomponent_key_event.h",
    "//foundation/arkui/ace_engine/interfaces/native/ui_input_event.h",
  ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("sdkconfig") {
  sources = [ "./sdkConfig.json" ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("engine_apiconfig") {
  sources = [ "./engine/apiConfig.json" ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("api_apiconfig") {
  sources = [ "./plugins/api/apiConfig.json" ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}

ohos_copy("component_apiconfig") {
  sources = [ "./plugins/component/apiConfig.json" ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name/"
  module_install_name = ""
  part_name = "common"
  subsystem_name = "common"
}
